# tcc_gosurf

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  configure.sh  configure_debug.sh  filterAll.sh  inspectWave.sh  main.cpp  simpleTimestackAll.sh  timestackAll.sh
analysed_waves/: latexTableGenerator.awk  manual_waves_total.txt  report_compiler.awk  report_compiler.sh  waves_total.txt
analysed_waves/IMG_0886/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex
analysed_waves/IMG_0887/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0888/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0889/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0894/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0895/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0898/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
analysed_waves/IMG_0900/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex
analysed_waves/IMG_0902/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex
analysed_waves/IMG_0903/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex
analysed_waves/pivideo11/: manual_report.txt  manual_waves.txt  report.txt  report_table.tex  waves.txt
doc/: ApendiceA.tex  Capa.tex  Preambulo.tex  Principal.aux  Principal.bbl  Principal.blg  Principal.lof  Principal.lot  Principal.toc  TesePack.tex  biblio.bib  cap1.tex  cap2.tex  cap2_fmello.tex  cap3.tex  cap3_fmello.tex  cap4.tex  cap5.tex  cap6.tex  cep2_prof.tex  pdfpages.dtx  ppdvipdfmx.def  ppdvips.def  ppluatex.def  ppnull.def  ppvtex.def  ppxetex.def  tcc_davidbrittojr.aux  tcc_davidbrittojr.bbl  tcc_davidbrittojr.blg  tcc_davidbrittojr.lof  tcc_davidbrittojr.lot  tcc_davidbrittojr.tex  tcc_davidbrittojr.toc
doc/output/: tcc_davidbrittojr.aux  tcc_davidbrittojr.lof  tcc_davidbrittojr.toc
src/: filterImage.cpp  generateReport.cpp  histogramComparison.cpp  imageFilter.cpp  main.cpp  simpleTimestack.cpp  stabilize.cpp  timestack.cpp  timestackFromVideo.cpp  waveInspector.cpp  waveViewer.cpp
src/debug/: aus.cpp  thresholdDebugger.cpp
src/include/: camera.hpp  cannyFilter.h  coloredPoint.hpp  derivable.hpp  downsampledTimestack.h  dualImageViewer.hpp  filterPipeline.h  gaussianBlurFilter.h  gradedTimestack.h  (+23 more)
(+104 files in other folders)
